# gb-retailapi-rust-client

./: Cargo.toml  README.md  git_push.sh
.openapi-generator/: FILES
docs/: AdditionalInfo.md  AttributeSuggestion.md  Audience.md  AutocompleteApi.md  BiasDto.md  BiasDtoPeriodStrengthDto.md  BiasingProfileDto.md  BoostedProductBucket.md  ColorInfo.md  CustomParameterDto.md  CustomParameterTrigger.md  DebugDto.md  ErrorDto.md  ErrorResponse.md  Experiment.md  ExperimentVariant.md  Facet.md  FacetSearchRequestDto.md  FacetSearchResponseDto.md  FieldMask.md  Filter.md  FilterParameter.md  FulfillmentInfo.md  Identity.md  Image.md  Interval.md  Merchandiser.md  Metadata.md  NavigationDto.md  NavigationType.md  NavigationTypeDto.md  Order.md  Overwrites.md  PageInfoDto.md  PinnedRefinement.md  PredictResults.md  PriceInfo.md  PriceInfoPeriodPriceRange.md  PriceInfoPriceEffectiveTime.md  PriceInfoPriceExpireTime.md  (+58 more)
src/apis/: autocomplete_api.rs  configuration.rs  mod.rs  product_api.rs  recommendations_api_api.rs  search_api.rs
src/models/: additional_info.rs  attribute_suggestion.rs  audience.rs  bias_dto.rs  bias_dto_period_strength_dto.rs  biasing_profile_dto.rs  boosted_product_bucket.rs  color_info.rs  custom_parameter_dto.rs  custom_parameter_trigger.rs  debug_dto.rs  error_dto.rs  error_response.rs  experiment.rs  experiment_variant.rs  facet.rs  facet_search_request_dto.rs  facet_search_response_dto.rs  field_mask.rs  filter.rs  filter_parameter.rs  fulfillment_info.rs  identity.rs  image.rs  interval.rs  merchandiser.rs  message_type.rs  metadata.rs  mod.rs  (+67 more)
