[package]
name = "gbretailapiclient"
version = "0.0"
authors = ["ops@groupbyinc.com"]
description = "GroupBy Retail API"
license = "UNLICENSED"
edition = "2018"
homepage = "https://github.com/groupby/gb-retailapi-rust-client

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
